[package]
name = "albertdb"
version = "0.1.0"
edition = "2021"

[lib]
name = "albertdb"
path = "src/lib.rs"

[[bin]]
name = "main1"
path = "src/bin/main.rs"

[dependencies]
actix-web = "3"
clap = { version = "3.0", features = ["derive"] }
env_logger = "0.9.0"
fasthash = "0.4"
flate2 = "1.0.22"
futures = "0.3.28"
log = "0.4.14"
prost = "0.11"
rand = "0.8.4"
regex = "1.5.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.61"
serde_yaml = "0.8.23"
tonic = "0.8.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
actix-rt = "1"

[build-dependencies]
tonic-build = "0.8.0"
